--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "swiper/css";
 
 :root {
   --background: #ffffff;
@@ -10,3 +11,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.height-test {
+  height: 3000px;
+}
+
